force-app/main/default/objects/Attendance__c/fields/Club_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Club_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Meeting</label>
    <referenceTo>Club_Meeting__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>