force-app/main/default/objects/Attendance__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <description>Email__c with your Student email field API name, or use the field picker</description>
    <formula>Student__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Email</label>
    <type>Text</type>
</CustomField>