force-app/main/default/objects/Attendance__c/listViews/Attendances_List.listView-meta.xml
<ListView>
    <fullName>Attendances_List</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Time__c</columns>
    <columns>Club_Meeting__c</columns>
    <columns>Student__c</columns>
    <columns>Student_Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>Attendances List</label>
</ListView>